--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ const cities = {
 Object.entries(cities).forEach(([name, coords]) =>
   L.circleMarker(coords, {
     radius: 6,
-    fillColor: "#F8423A",
+    fillColor: "#002855",
     color: "#ffffff",
     weight: 1,
     opacity: 1,
